--- a/conf/doctrine/searchquery/SearchQuery.orm.yml
+++ b/conf/doctrine/searchquery/SearchQuery.orm.yml
@@ -2,7 +2,7 @@ App\Domain\SearchQuery\Model\SearchQuery:
     type: entity
     table: searchquery
     oneToOne:
-        game:
+        gameMode:
             targetEntity: App\Domain\GameMode\Model\AbstractGameMode
             joinColumn:
                 name: gametype_id
@@ -11,7 +11,7 @@ App\Domain\SearchQuery\Model\SearchQuery:
             fetch: EAGER
             cascade: [ persist ]
     oneToMany:
-        playerCharacter:
+        playerCharacters:
             targetEntity: App\Domain\PlayerCharacter\Model\PlayerCharacter
             mappedBy: searchQuery
             fetch: EAGER
