--- a/conf/validation/PlayerCharacter.yml
+++ b/conf/validation/PlayerCharacter.yml
@@ -1,4 +1,4 @@
-App\DTO\CharacterTypeDTO:
+App\Domain\PlayerCharacter\Model\PlayerCharacter:
     properties:
         type:
             - NotBlank: ~
