--- a/composer.json
+++ b/composer.json
@@ -20,10 +20,11 @@
             "url": "https://github.com/tyx/tactician-bundle"
         }
     ],
+    "minimum-stability": "dev",
     "require": {
-        "php": ">=7.0.0",
+        "php": ">=7.1",
         "roave/security-advisories": "dev-master",
-        "symfony/symfony": "dev-master",
+        "symfony/symfony": "3.3.*",
         "doctrine/orm": "dev-master",
         "doctrine/doctrine-bundle": "dev-master",
         "doctrine/doctrine-cache-bundle": "dev-master",
@@ -37,7 +38,7 @@
         "incenteev/composer-parameter-handler": "dev-master",
 	    "friendsofsymfony/rest-bundle": "dev-master",
 	    "willdurand/hateoas-bundle": "dev-master",
-        "jms/serializer-bundle": "1.5.0",
+        "jms/serializer-bundle": "1.5.*",
         "hautelook/templated-uri-bundle": "dev-master",
 	    "pagerfanta/pagerfanta": "dev-master",
 	    "simple-bus/symfony-bridge": "dev-master",
@@ -51,7 +52,7 @@
     },
     "require-dev": {
         "sensio/generator-bundle": "dev-master",
-        "phpunit/phpunit": "6.0.8",
+        "phpunit/phpunit": "dev-master",
 	    "behat/behat": "dev-master",
         "phpspec/phpspec": "dev-master",
 	    "phpspec/prophecy": "dev-master",
@@ -83,10 +84,7 @@
         ]
     },
     "config": {
-        "bin-dir": "bin",
-        "platform": {
-            "php": "7.0.0"
-        }
+        "bin-dir": "bin"
     },
     "extra": {
         "symfony-app-dir": "conf",
@@ -99,7 +97,7 @@
             "file": "conf/parameters.yml"
         },
         "branch-alias": {
-            "dev-master": "3.3-dev"
+            "dev-master": "4.0-dev"
         }
     }
 }
