small fix to href link generation.

--- a/conf/serializer/post/Model.Post.yml
+++ b/conf/serializer/post/Model.Post.yml
@@ -19,5 +19,5 @@ App\Domain\Post\Model\Post:
             href:
                 route: get_post
                 parameters:
-                    id: expr(object.getId())
+                    postId: expr(object.getId())
                     absolute: true
