fix permission issue with docker

--- a/deployment/php/Dockerfile
+++ b/deployment/php/Dockerfile
@@ -5,6 +5,7 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get install -y sqlite3 libsqlite3-dev
 RUN docker-php-ext-install opcache
 RUN docker-php-ext-install json
 RUN docker-php-ext-install pdo_sqlite
+RUN usermod -u 1000 www-data
 
 ADD php.ini /usr/local/etc/php/
 
