In the middle of the test mess.

--- a/test/integration/behat.yml
+++ b/test/integration/behat.yml
@@ -17,6 +17,7 @@ default:
                 - Test\Integration\Context\ApiContext:
                     doctrine: '@doctrine'
                     commandBus: '@tactician.commandbus.default'
+                    basePath: '%paths.base%'
                 - Test\Integration\Context\ChaosMonkeyContext:
                     doctrine: '@doctrine'
                     commandBus: '@tactician.commandbus.default'
