--- a/test/Fixtures/DatabaseSeeder/Post/post_x50.yml
+++ b/test/Fixtures/DatabaseSeeder/Post/post_x50.yml
@@ -5,21 +5,25 @@ include:
     - ../GameType/grift_template.yml
     - ../SearchQuery/template.yml
 
-App\Model\Character:
+App\Domain\SearchQuery\ValueObject\SearchQueryId:
+    searchqueryid{1..50}:
+      __construct: [null]
+
+App\Domain\Player\Model\Player:
     monks{1..50} (extends character): []
 
-App\Model\Grift:
+App\Domain\GameMode\Model\Grift:
     grifts{1..50} (extends grift):
         __construct: [<{level}>]
 
-App\Model\SearchQuery:
+App\Domain\SearchQuery\Model\SearchQuery:
     searchqueries{1..50} (extends searchquery):
-        __construct: ['<numberBetween(70, 1000)>', '@grifts<current()>', '<dateTime("now")>']
+        __construct: ['@searchqueryid<current()>', '@grifts<current()>', '<dateTime("now")>']
 
-App\Model\CharacterType:
+App\Domain\PlayerCharacter\Model\PlayerCharacter:
     charactertypes{1..50} (extends charactertype):
         __construct: ['@searchqueries<current()>', <{type}>]
 
-App\Model\Post:
+App\Domain\Post\Model\Post:
     posts{1..50} (extends post):
         __construct: ['@monks<current()>', '@searchqueries<current()>', "<dateTimeBetween('-26 days', 'now')>"]
