--- a/conf/services.yml
+++ b/conf/services.yml
@@ -5,16 +5,16 @@ services:
         autowire: true
 
     _instanceof:
-        App\Services\QueryService:
-            public: true
-        App\Command\Handlers\LoadFixturesCommandHandler:
-            public: true
-            tags:
-                - { name: tactician.handler, command: App\Command\Commands\LoadFixtures }
-        App\Command\Handlers\DatabaseClearCommandHandler:
-            public: true
-            tags:
-                - { name: tactician.handler, command: App\Command\Commands\ClearDatabase }
+#        App\Services\QueryService:
+#            public: true
+#        App\Command\Handlers\LoadFixturesCommandHandler:
+#            public: true
+#            tags:
+#                - { name: tactician.handler, command: App\Command\Commands\LoadFixtures }
+#        App\Command\Handlers\DatabaseClearCommandHandler:
+#            public: true
+#            tags:
+#                - { name: tactician.handler, command: App\Command\Commands\ClearDatabase }
 
         Twig_ExtensionInterface:
             tags: ['twig.extension']
