Continuuing on GET tests.

--- a/conf/doctrine/playercharacter/PlayerCharacter.orm.yml
+++ b/conf/doctrine/playercharacter/PlayerCharacter.orm.yml
@@ -8,7 +8,8 @@ App\Domain\PlayerCharacter\Model\PlayerCharacter:
             joinColumn:
                 name: searchquery_id
                 referencedColumnName: id
-            fetch: EAGER
+                onDelete: "SET NULL"
+            fetch: LAZY
     id:
         id:
             type: playerCharacterId
