--- a/conf/doctrine/post/Post.orm.yml
+++ b/conf/doctrine/post/Post.orm.yml
@@ -19,7 +19,7 @@ App\Domain\Post\Model\Post:
                 name: searchquery_id
                 referencedColumnName: id
                 nullable: true
-                onDelete: CASCADE
+                onDelete: SET NULL
             fetch: LAZY
             cascade: [ persist, remove ]
             orphanRemoval: true
